<resources>
    <string name="app_name">SkyWriter</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="Welcome">Welcome!</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_note">New Script</string>
    <string name="login_menu_item">Log In</string>
    <string name="date">Date</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="refresh_button">Refresh</string>
    <string name="main_title">SkyWriter \u03D0</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
</resources>
