<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andrewtorr.skywriter.ScriptListActivity">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item android:id="@+id/new_script"
        android:title="New Script"
        android:icon="@mipmap/ic_add_circle_white_48dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/LogoutBtn"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>

<!--android:title="@string/search"-->