<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="@color/header"
            android:textSize="32sp"
            android:padding="10dp"
            android:textAlignment="center"
            android:paddingBottom="30dp"/>

        <TextView
            android:id="@+id/lblusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/header"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txtusername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/header"
            android:textCursorDrawable="@null"/>

        <TextView
            android:id="@+id/lblpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="@color/header"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/header"
            android:textCursorDrawable="@null"/>

        <TextView
            android:id="@+id/lblpassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:visibility="invisible"
            android:textColor="@color/header"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/password_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:visibility="invisible"
            android:textColor="@color/header"/>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginBtn"
            android:textColor="@color/main_color"
            android:background="@color/header"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignupBtn"
            android:textColor="@color/main_color"
            android:background="@color/header"
            android:layout_margin="5dp"/>

    </LinearLayout>

</RelativeLayout>